fix(vercel): update configuration for Docusaurus build
- Configure static-build to run from docs directory
- Set proper build command to install dependencies and build
- Specify correct output directory for Docusaurus static files

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,18 @@
 {
-  "root": "docs",
-  "buildCommand": "npm run build",
-  "outputDirectory": "build",
-  "devCommand": "npm start"
+  "builds": [
+    {
+      "src": "docs/**/*",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build",
+        "buildCommand": "cd docs && npm install && npm run build"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
