fix(vercel): correct configuration for Docusaurus monorepo
- Set framework to docusaurus
- Specify rootDirectory as docs
- Target package.json in docs directory for build
- Configure proper distDir for Docusaurus output

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,19 @@
 {
+  "framework": "docusaurus",
+  "rootDirectory": "docs",
   "builds": [
     {
-      "src": "docs/**/*",
+      "src": "docs/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "build",
-        "buildCommand": "cd docs && npm install && npm run build"
+        "distDir": "build"
       }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/docs/build/$1"
     }
   ]
 }
