--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,18 @@
 {
-  "framework": "docusaurus",
-  "rootDirectory": "docs",
   "builds": [
     {
       "src": "docs/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "build"
+        "distDir": "build",
+        "buildCommand": "cd docs && npm install && npm run build"
       }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/docs/build/$1"
+      "dest": "/index.html"
     }
   ]
 }
