fix(vercel): update configuration to fix 404 issue
- Set rootDirectory to 'docs' for proper Docusaurus project detection
- Configure buildCommand to run 'npm run build'
- Set outputDirectory to 'build' for Docusaurus output
- Add catch-all route to serve index.html for client-side routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,8 @@
 {
-  "builds": [
-    {
-      "src": "docs/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build",
-        "buildCommand": "cd docs && npm install && npm run build"
-      }
-    }
-  ],
+  "rootDirectory": "docs",
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
