fix(vercel): correct configuration for Docusaurus monorepo to fix 404
- Use builds configuration targeting docs/package.json
- Set proper build command to run from docs directory
- Configure distDir to 'build' for Docusaurus output
- Add catch-all route to serve index.html for client-side routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,18 @@
 {
-  "rootDirectory": "docs",
-  "buildCommand": "npm run build",
-  "outputDirectory": "build",
+  "builds": [
+    {
+      "src": "docs/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build",
+        "buildCommand": "cd docs && npm install && npm run build"
+      }
+    }
+  ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
